fix:  linux scroll with auto for better overflow handling in multiple components

--- a/src/app/core/components/configuration/config.component.scss
+++ b/src/app/core/components/configuration/config.component.scss
@@ -7,7 +7,7 @@
 .page-content {
   width: 100%;
   height: calc(100% - 63px);
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-behavior: smooth;
   padding: 0px 24px 10px 24px;
 }
